--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4">
                         <div class="section-title-2 mt-25">
-                            <h2 class="title">Download our Mobail App Now!!</h2>
+                            <h2 class="title">Download our Mobil App Now!!</h2>
                             <span class="line"></span>
                             <p>Our Mobail App is now available at both Playstore and Appstore</p>
                         </div>
@@ -848,15 +848,17 @@
                             <h4 class="footer-title">Contact Info</h4>
                             <ul class="link-list">
                                 <li>
-                                    <p>245, New Town, Marklen Street North City, New York, USA</p>
+                                    <p>Mini bypass road puthiyara Calicut, Kerala, India Pin 673012
+
+</p>
                                 </li>
                                 <li>
-                                    <p><a href="tel:+01254659874">+01254 659 874 </a></p>
-                                    <p><a href="tel:+32145857458">+32145 857 458</a></p>
+                                    
+                                    <p><a href="tel:+918137888123">+918137888123</a></p>
                                 </li>
                                 <li>
-                                    <p><a href="mailto://info@example.com">info@example.com</a></p>
-                                    <p><a href="#">www.example.com</a></p>
+                                    <p><a href="mailto://kenmeofficial@gmail.com">kenmeofficial@gmail.com</a></p>
+                                   
                                 </li>
                             </ul>
                         </div>
