--- a/blog-left-sidebar.html
+++ b/blog-left-sidebar.html
@@ -351,7 +351,7 @@
                         <div class="section-title-2 mt-25">
                             <h2 class="title">Download our Mobail App Now!!</h2>
                             <span class="line"></span>
-                            <p>Our Mobail App is now available at both Playstore and Appstore</p>
+                            <p>Our Mobile App is now available at both Playstore and Appstore</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
