--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4">
                         <div class="section-title-2 mt-25">
-                            <h2 class="title">Download our Mobil App Now!!</h2>
+                            <h2 class="title">Download our Mobile App Now!!</h2>
                             <span class="line"></span>
                             <p>Our Mobail App is now available at both Playstore and Appstore</p>
                         </div>
