--- a/teachers.html
+++ b/teachers.html
@@ -257,9 +257,9 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="section-title-2 mt-25">
-                            <h2 class="title">Download our Mobail App Now!!</h2>
+                            <h2 class="title">Download our Mobile App Now!!</h2>
                             <span class="line"></span>
-                            <p>Our Mobail App is now available at both Playstore and Appstore</p>
+                            <p>Our Mobile App is now available at both Playstore and Appstore</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
