--- a/login.html
+++ b/login.html
@@ -250,7 +250,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="section-title-2 mt-25">
-                            <h2 class="title">Download our Mobail App Now!!</h2>
+                            <h2 class="title">Download our Mobile App Now!!</h2>
                             <span class="line"></span>
                             <p>Our Mobile App is now available at both Playstore and Appstore</p>
                         </div>
