--- a/contact.html
+++ b/contact.html
@@ -209,7 +209,7 @@
                         </div>
                         <div class="info-content">
                             <h5 class="title">Address</h5>
-                            <p>297 Central Street, New Town North City, New York, USA</p>
+                            <p>Mini bypass road puthiyara Calicut, Kerala, India Pin 673012</p>
                         </div>
                     </div>
                 </div>
@@ -220,8 +220,8 @@
                         </div>
                         <div class="info-content">
                             <h5 class="title">Phone</h5>
-                            <p><a href="tel:+62548254658">+62548 254 658</a></p>
-                            <p><a href="tel:+99875587478">+99875 587 478</a></p>
+                            <p><a href="tel:+918137888123">8137888123</a></p>
+                          
                         </div>
                     </div>
                 </div>
@@ -232,8 +232,8 @@
                         </div>
                         <div class="info-content">
                             <h5 class="title">Web</h5>
-                            <p><a href="mailto://info@example.com">info@example.com</a></p>
-                            <p><a href="www.example.com">www.example.com</a></p>
+                           
+                            <p><a href="#">www.kenme.in</a></p>
                         </div>
                     </div>
                 </div>
