--- a/index.html
+++ b/index.html
@@ -655,20 +655,20 @@
                 <div class="row">
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.2s">
-                            <span class="counter-count"><span class="count">100</span> +</span>
+                            <span class="counter-count"><span class="count">10K</span> +</span>
                             <p>Students</p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.4s">
-                            <span class="counter-count"><span class="count">20</span> +</span>
+                            <span class="counter-count"><span class="count">100</span> +</span>
                             <p>Faculties</p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.6s">
-                            <span class="counter-count"><span class="count">3</span> +</span>
-                            <p>Branches</p>
+                            <span class="counter-count"><span class="count">ISO</span> </span>
+                            <p>Certification</p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
