--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.6s">
-                            <span class="counter-count"><span class="count"></span> ISO</span>
+                            <span class="counter-count"><span class="count"></span> <p>ISO</p></span>
                             <p>Certification</p>
                         </div>
                     </div>
