--- a/contact.html
+++ b/contact.html
@@ -254,22 +254,22 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="single-form">
-                                            <input type="text" name="name" placeholder="Name">
+                                            <input type="text" name="name" placeholder="Name" required/>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="single-form">
-                                            <input type="email" name="email" placeholder="Email">
+                                            <input type="email" name="email" placeholder="Email" required/>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="single-form">
-                                            <input type="text" name="phone" placeholder="Phone">
+                                            <input type="text" name="phone" placeholder="Phone" required/>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="single-form">
-                                            <input type="text" name="subject" placeholder="Subject">
+                                            <input type="text" name="subject" placeholder="Subject" required/>
                                         </div>
                                     </div>
                                     <div class="col-md-12">
