--- a/index.html
+++ b/index.html
@@ -812,9 +812,9 @@
                             <h4 class="footer-title">Our Campus</h4>
                             <ul class="link-list">
                                 <li><a href="about-us.html">About us</a></li>
-                                <li><a href="#">Campus map</a></li>
-                                <li><a href="#">360O  view</a></li>
-                                <li><a href="#">Notice board</a></li>
+                                <li><a href="#">360O0  views</a></li>
+                                <li><a href="termsandconditions.html">Terms and Conditions</a></li>
+                                <li><a href="pivacy-policy.html">Privacy - Policy</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
