--- a/contact.html
+++ b/contact.html
@@ -275,6 +275,7 @@
                                     <div class="col-md-12">
                                         <div class="single-form">
                                             <textarea name="message" placeholder="Write here..."></textarea>
+                                             <p> By Clicking I Give My Consent To Receive Messages/Email And Updates To My Number Or Email Id</p><input type="checkbox" required/>
                                         </div>
                                     </div>
                                     <p class="form-message"></p>
