--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     <div class="col-lg-3 col-sm-6 courses-col">
                         <div class="single-courses mt-30 wow fadeInUpBig" data-wow-duration="1s" data-wow-delay="0.2s">
                             
-                            <h4 class="courses-title"><a href="#">GRAMMER CLASSES</a></h4>
+                            <h4 class="courses-title"><a href="#">GRAMMAR CLASSES</a></h4>
                             <div class="duration-fee">
                                 <p class="duration">Duration: <span> 2 months</span></p>
                                 <p class="fee">Personal <span> Trainers</span></p>
