--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <div class="col-lg-8">
                     <div class="section-title mt-40">
                         <h2 class="title">Here is our <br> Top Courses</h2>
-                        <p>Even slightly believable. If you are going use a passage of Lorem Ipsum need</p>
+<!--                         <p>Even slightly believable. If you are going use a passage of Lorem Ipsum need</p> -->
                     </div>
                 </div>
             </div>
@@ -581,7 +581,9 @@
                     <div class="testimonials-title">
                         <h2 class="title">OUR FOCAL POINT</h2>
                         <span class="line"></span>
-                        <p>At Kenme, we focus on helping out students who find it difficult to take out time from their daily schedule for learning, but still has a passion for it. As we offer lessons through WhatsApp students can make learning English a part of their daily routine, without having to spend any specific time for it. As you have the convenience to learn from your comfort, Kenme makes learning a pleasing affair, and where knowledge comes to your mobile screens.</p>
+                        <p>At Kenme, we focus on helping out students who find it difficult to take out time from their daily schedule for learning, but still has a passion for it. As we offer lessons through online students can make learning English a part of their daily routine, without having to spend extra time for it. As you have the convenience to learn from your comfort, Kenme makes learning a pleasing affair, and where knowledge comes to your mobile screens.</p>
+                        <p>We, Keralites who are always ready to accept changes and different cultures, Moreover understand the prominence English language has and working to make ourselves flawless in this magnificent language. This is where you will find the need of a world class, standard learning aid, and that is what we provide at Kenme Online English</p>
+                        <p>If you are looking for a place that answers all your confusion, worries and to clear out stumbling blocks in your language, Kenme is the best choice.</p>
                     </div>
                 </div>
                 <div class="col-lg-8">
@@ -619,7 +621,7 @@
                                     <div class="single-testimonial-content">
                                         <div class="content-text">
                                             
-                                            <p>We, Keralites who are always ready to accept changes and different cultures understand the prominence English has and is working to make ourselves flawless in this magnificent language. This is where you will find the need of a world class, standard learning aid, from the ..</p>
+                                            <p>We, Keralites who are always ready to accept changes and different cultures, Moreover understand the prominence English language has and working to make ourselves flawless in this magnificent language. This is where you will find the need of a world class, standard learning aid, and that is what we provide at Kenme Online English</p>
                                         </div>
                                         <!-- <div class="content-meta">
                                             <p class="name">Alex Smith</p>
@@ -629,7 +631,7 @@
                                     <div class="single-testimonial-content">
                                         <div class="content-text">
                                            
-                                            <p>of your homes, through the easiest, messenger application WhatsApp, that is Kenme, online spoken English. If you are looking for a place that answers all your confusion, worries and to clear out stumbling blocks in your language, Kenme is the best choice.</p>
+                                            <p>If you are looking for a place that answers all your confusion, worries and to clear out stumbling blocks in your language, Kenme is the best choice.</p>
                                         </div>
                                         <!-- <div class="content-meta">
                                             <p class="name">Alex Smith</p>
