--- a/index.html
+++ b/index.html
@@ -582,8 +582,8 @@
                         <h2 class="title">OUR FOCAL POINT</h2>
                         <span class="line"></span>
                         <p>At Kenme, we focus on helping out students who find it difficult to take out time from their daily schedule for learning, but still has a passion for it. As we offer lessons through online students can make learning English a part of their daily routine, without having to spend extra time for it. As you have the convenience to learn from your comfort, Kenme makes learning a pleasing affair, and where knowledge comes to your mobile screens.</p>
-                        <p>We, Keralites who are always ready to accept changes and different cultures, Moreover understand the prominence English language has and working to make ourselves flawless in this magnificent language. This is where you will find the need of a world class, standard learning aid, and that is what we provide at Kenme Online English</p>
-                        <p>If you are looking for a place that answers all your confusion, worries and to clear out stumbling blocks in your language, Kenme is the best choice.</p>
+                        <p>We, Keralites who are always ready to accept changes and different cultures, Moreover understand the prominence English language has and working to make ourselves flawless in this magnificent language. This is where you will find the need of a world class, standard learning aid, and that is what we provide at Kenme Online English. If you are looking for a place that answers all your confusion, worries and to clear out stumbling blocks in your language, Kenme is the best choice.</p>
+                       
                     </div>
                 </div>
                 <div class="col-lg-8">
