--- a/contact.html
+++ b/contact.html
@@ -209,7 +209,8 @@
                         </div>
                         <div class="info-content">
                             <h5 class="title">Address</h5>
-                            <p>Mini bypass road puthiyara Calicut, Kerala, India Pin 673012</p>
+                            <p>KENME INSTITUTIONS LLP
+27/2245 A2, MANKAVU BY PASS, KOZHIKODE, Kozhikode, Kerala, 673016, India</p>
                         </div>
                     </div>
                 </div>
@@ -387,9 +388,8 @@
                             <h4 class="footer-title">Contact Info</h4>
                             <ul class="link-list">
                                 <li>
-                                    <p>Mini bypass road puthiyara
-                                        Calicut, Kerala, India
-                                        Pin 673012</p>
+                                    <p>KENME INSTITUTIONS LLP
+27/2245 A2, MANKAVU BY PASS, KOZHIKODE, Kozhikode, Kerala, 673016, India</p>
                                 </li>
                                 <li>
                                     <p><a href="tel:+918137888123">8137888123 </a></p>
