--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="single-slider d-flex align-items-center bg_cover" style="background-image: url(assets/images/slider-1.jpg);">
             <div class="container">
                 <div class="slider-content">
-                    <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s">Speak easy with KENME online english</h2>
+                    <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s">English Mastery With KENME ONLINE ENGLISH</h2>
                     <ul class="slider-btn">
                         <!-- <li><a data-animation="fadeInUp" data-delay="0.6s" class="main-btn main-btn-2" href=""></a></li> -->
                         <li><a data-animation="fadeInUp" data-delay="1s" class="main-btn" href="#">Learn more</a></li>
@@ -196,7 +196,7 @@
         <div class="single-slider d-flex align-items-center bg_cover" style="background-image: url(assets/images/slider-2.jpg);">
             <div class="container">
                 <div class="slider-content">
-                    <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s">Learn English with KENME online English</h2>
+                    <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s">KENME ONLINE ENGLISH to Teach You English</h2>
                     <ul class="slider-btn">
                         <!-- <li><a data-animation="fadeInUp" data-delay="0.6s" class="main-btn main-btn-2" href="our-courses-left-sidebar.html">View Courses</a></li> -->
                         <li><a data-animation="fadeInUp" data-delay="1s" class="main-btn" href="#">Learn more</a></li>
