--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                     </ul> -->
                                 </li>
                                 <li>
-                                    <a href="faq.html">Faq</a>
+                                    <a href="faq.html">FAQ</a>
                                     <!-- <ul class="nav-dropdown nav-submenu">
                                         <li><a href="blog.html">Blog </a></li>
                                         <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
