--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s">English Mastery With KENME ONLINE ENGLISH</h2>
                     <ul class="slider-btn">
                         <!-- <li><a data-animation="fadeInUp" data-delay="0.6s" class="main-btn main-btn-2" href=""></a></li> -->
-                        <li><a data-animation="fadeInUp" data-delay="1s" class="main-btn" href="#">Learn more</a></li>
+                        <li><a data-animation="fadeInUp" data-delay="1s" class="main-btn" href="#">Learn More</a></li>
                     </ul>
                 </div>
             </div>
@@ -199,7 +199,7 @@
                     <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s">KENME ONLINE ENGLISH to Teach You English</h2>
                     <ul class="slider-btn">
                         <!-- <li><a data-animation="fadeInUp" data-delay="0.6s" class="main-btn main-btn-2" href="our-courses-left-sidebar.html">View Courses</a></li> -->
-                        <li><a data-animation="fadeInUp" data-delay="1s" class="main-btn" href="#">Learn more</a></li>
+                        <li><a data-animation="fadeInUp" data-delay="1s" class="main-btn" href="#">Learn More</a></li>
                     </ul>
                 </div>
             </div>
