--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="features-wrapper">
                 <div class="row justify-content-end">
                     <div class="col-lg-8">
-                        <h2 class="features-title">Provide <span>best <br> Educational</span> Environment</h2>
+                        <h2 class="features-title">Educational <span>Environment <br> at Its</span> Best</h2>
                     </div>
                 </div>
                 <div class="row justify-content-end">
