--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section-title mt-40">
-                        <h2 class="title">Here is our <br> Top Courses</h2>
+                        <h2 class="title">Here are Our Top Courses</h2>
 <!--                         <p>Even slightly believable. If you are going use a passage of Lorem Ipsum need</p> -->
                     </div>
                 </div>
