--- a/index.html
+++ b/index.html
@@ -509,8 +509,8 @@
                     <div class="testimonials-title">
                         <h2 class="title">OUR FOCAL POINT</h2>
                         <span class="line"></span>
-                        <p>At KENME INSTITUTIONS LLP, we focus on helping out students who find it difficult to take out time from their daily schedule for learning, but still has a passion for it. As we offer lessons through online students can make learning English a part of their daily routine, without having to spend extra time for it. As you have the convenience to learn from your comfort, Kenme makes learning a pleasing affair, and where knowledge comes to your mobile screens.</p>
-                        <p>We, Keralites who are always ready to accept changes and different cultures, Moreover understand the prominence English language has and working to make ourselves flawless in this magnificent language. This is where you will find the need of a world class, standard learning aid, and that is what we provide at Kenme Online English. If you are looking for a place that answers all your confusion, worries and to clear out stumbling blocks in your language, Kenme is the best choice.</p>
+                        <p>At KENME ONLINE ENGLISH, we focus on helping our students who find it difficult to take out time from their daily schedule for learning, but are passionate about the same. As our lessons are all online, students can make learning English a part of their daily routine, without having to spend extra time for it. As you have the convenience to learn from your comfort zone, KENME makes your learning a very pleasing affair.</p>
+                        <p>We, Keralites, who've always been keen about imbibing changes and different cultures, couldn't do it any better, than by mastering the Global Language that is English. This is where you will find the need for a world- class, standard learning aid, and that's exactly what awaits you at KENME Online English, Hesitate no further in joining our family, wherein you can kick-start your journey towards nailing the English language.</p>
                        <br>
                     </div>
                 </div>
