--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                                 <img src="assets/images/icon/icon-1.png" alt="">
                             </div>
                             <div class="box-content">
-                                <p>Knowledge Based Learning</p>
+                                <p>Knowledge-Based Learning</p>
                             </div>
                         </div>
                     </div>
