--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <!--====== Slider Start ======-->
 
     <section class="slider-area slider-active">
-        <div class="single-slider d-flex align-items-center bg_cover" style="background-image: url(assets/images/slider-1.jpg);">
+        <div class="single-slider d-flex align-items-center bg_cover" style="background-image: url(assets/images/Slider1#.jpg);">
             <div class="container">
                 <div class="slider-content">
                     <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s">English Mastery With KENME ONLINE ENGLISH</h2>
@@ -193,7 +193,7 @@
                 </div>
             </div>
         </div>
-        <div class="single-slider d-flex align-items-center bg_cover" style="background-image: url(assets/images/slider-2.jpg);">
+        <div class="single-slider d-flex align-items-center bg_cover" style="background-image: url(assets/images/Slider2.jpg);">
             <div class="container">
                 <div class="slider-content">
                     <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s">KENME ONLINE ENGLISH to Teach You English</h2>
