--- a/index.html
+++ b/index.html
@@ -573,25 +573,25 @@
                 <div class="row">
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.2s">
-                            <span class="counter-count"><span class="count">10000</span> +</span>
+                            <span class="counter-count"><span class="count">10000</span>+</span>
                             <p>Students</p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.4s">
-                            <span class="counter-count"><span class="count">100</span> +</span>
+                            <span class="counter-count"><span class="count">100</span>+</span>
                             <p>Faculties</p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.6s">
                             <span class="counter-count"><span class="count">9</span> +</span>
-                            <p>Cources</p>
+                            <p>Courses</p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.8s">
-                            <span class="counter-count"><span class="count">10</span> +</span>
+                            <span class="counter-count"><span class="count">10</span>+</span>
                             <p>Awards win</p>
                         </div>
                     </div>
