--- a/index.html
+++ b/index.html
@@ -585,14 +585,14 @@
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.6s">
-                            <span class="counter-count"><span class="count">9</span> +</span>
+                            <span class="counter-count"><span class="count">9</span>+</span>
                             <p>Courses</p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.8s">
                             <span class="counter-count"><span class="count">10</span>+</span>
-                            <p>Awards win</p>
+                            <p>Awards Won</p>
                         </div>
                     </div>
                 </div>
@@ -686,22 +686,22 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4">
                         <div class="section-title-2 mt-25">
-                            <h2 class="title">Download our Mobile App Now!!</h2>
+                            <h2 class="title">Download Our Mobile App Now!</h2>
                             <span class="line"></span>
-                            <p>Our Mobile App is now available at both Playstore and Appstore</p>
+                            <p>Our Mobile App is now available in both Play Store and App Store.</p>
                         </div>
                     </div>
                     <div class="col-lg-2">
                         <div class="newsletter-form mt-30">
                             <form action="#">
-                                <p>Playstore</p>
+                                <p>Play Store</p>
                                 <a href="https://play.google.com/store/apps/details?id=com.suhail.kenme"><i style="font-size: 50px;" class="fab fa-google-play"></i></a>
                             </form>
                         </div>
                     </div>
                     <div class="col-lg-2">
                         <div class="newsletter-form mt-30">
-                            <p>Appstore</p>
+                            <p>App Store</p>
                             <i style="font-size: 50px;" class="fab fa-app-store-ios"></i>
                         </div>
                     </div>
@@ -727,35 +727,35 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-link mt-45">
-                            <h4 class="footer-title">Our Campus</h4>
+                            <h4 class="footer-title">Our Institute</h4>
                             <ul class="link-list">
-                                <li><a href="about-us.html">About us</a></li>
-                                <li><a href="#">360O0  views</a></li>
+                                <li><a href="about-us.html">About Us</a></li>
+                                <li><a href="#">360O0  Views</a></li>
                                 <li><a href="termsandconditions.html">Terms and Conditions</a></li>
                                 <li><a href="pivacy-policy.html">Privacy - Policy</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-link mt-45">
-                            <h4 class="footer-title">Follow us</h4>
+                            <h4 class="footer-title">Follow Us</h4>
                             <ul class="link-list">
                                 <li><a href="https://www.facebook.com/kenmeenglish/"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="https://www.youtube.com/channel/UChelUEdGhAjMb1Tn4DzPtFA"><i class="fab fa-youtube"></i></a></li>
                                 <li><a href="https://www.instagram.com/kenme_english/"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                               
                             </ul>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-link mt-45">
-                            <h4 class="footer-title">Useful Link</h4>
+                            <h4 class="footer-title">Useful Links</h4>
                             <ul class="link-list">
                                 <li><a href="">All Courses</a></li>
                                 <li><a href="teachers.html">Our Teachers</a></li>
                                 <li><a href="">Our Events</a></li>
-                                <li><a href="blog-left-sidebar.html">Blog post</a></li>
+                                <li><a href="blog-left-sidebar.html">Blog Posts</a></li>
                                 <li><a href="faq.html">FAQs</a></li>
                             </ul>
                         </div>
@@ -767,7 +767,7 @@
                             <ul class="link-list">
                                 <li>
                                     <p>KENME INSTITUTIONS LLP
-                                        27/2245 A2, MANKAVU BY PASS, KOZHIKODE, Kozhikode, Kerala, 673016, India</p>
+                                        27/2245 A2, MANKAVU BYPASS, KOZHIKODE, KERALA, 673016, INDIA</p>
                                 </li>
                                 <li>
                                     
@@ -786,7 +786,7 @@
         <div class="footer-copyright">
             <div class="container">
                 <div class="copyright text-center">
-                    <p>KENME 2021 &copy; Copyright all right reserved. developed by <a href="https://wa.me/918301008408/?text=Hi">Alzeoh</a></p>
+                    <p>KENME 2023 &copy;All rights reserved by <a href="https://wa.me/918301008408/?text=Hi">ALZEOH.</a></p>
                 </div>
             </div>
         </div>
