--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                                 <span class="date">Entry Level</span>
 
                                 <p class="place">This level is designated for students who need to have a solid foundation in the English language. By the end of their training session with us, those who find it difficult to even form a meaningful English sentence will be able to write exceptional essays and talk with confidence and fluency.</p>
-                                <a href="#" class="more">Read Rore <i class="far fa-chevron-right"></i></a>
+                                <a href="#" class="more">Read More <i class="far fa-chevron-right"></i></a>
                             </div>
                         </div>
                         
