--- a/about-us.html
+++ b/about-us.html
@@ -269,7 +269,7 @@
                                     <img src="assets/images/icon/icon-2-2.png" alt="Icon">
                                 </div>
                                 <div class="item-content media-body">
-                                    <p>Knowledge Based  <br> Learning</p>
+                                    <p>Knowledge-Based  <br> Learning</p>
                                 </div>
                             </div>
                             <div class="single-features-item d-flex align-items-center">
@@ -323,11 +323,11 @@
             <div class="campus-visit-wrapper">
                 <div class="campus-content-col">
                     <div class="campus-content">
-                        <h2 class="campus-title">Visit our Campus with image gallery</h2>
+                        <h2 class="campus-title">Our Institute</h2>
                         <span class="line"></span>
-                        <p>Kenme has taken birth in the city of sculptures, Kozhikode and is thriving in this beautiful city ever since. </p>
-                        <h3 class="video-title">or watch video</h3>
-                        <a class="play video-popup" href="https://www.instagram.com/watch?v=0qHWub21h5c"><i class="fas fa-play"></i> <span>Play now</span></a>
+                        <p>KENME has taken birth in the city of sculptures, Kozhikode, and is thriving in this beautiful city ever since. </p>
+                        <h3 class="video-title">or Watch Video</h3>
+                        <a class="play video-popup" href="https://www.instagram.com/watch?v=0qHWub21h5c"><i class="fas fa-play"></i> <span>Play Now</span></a>
                     </div>
                 </div>
                 <div class="campus-image-col">
@@ -357,25 +357,25 @@
                 <div class="row">
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30">
-                            <span class="counter-count"><span class="count">100</span> +</span>
+                            <span class="counter-count"><span class="count">50000</span>+</span>
                             <p>Students</p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30">
-                            <span class="counter-count"><span class="count">20</span> +</span>
+                            <span class="counter-count"><span class="count">20</span>+</span>
                             <p>Faculties</p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30">
-                            <span class="counter-count"><span class="count">3</span> +</span>
+                            <span class="counter-count"><span class="count">3</span>+</span>
                             <p>Branches</p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6 counter-col">
                         <div class="single-counter mt-30">
-                            <span class="counter-count"><span class="count">20</span> +</span>
+                            <span class="counter-count"><span class="count">20</span>+</span>
                             <p>Awards win</p>
                         </div>
                     </div>
