--- a/about-us.html
+++ b/about-us.html
@@ -204,7 +204,9 @@
                     <div class="about-content mt-40">
                         <h2 class="about-title">Best <span>Educational</span> Environment</h2>
                         <span class="line"></span>
-                        <p>We marked our beginning on December 2020, and started our dream of helping hundreds of people in their voyage to a perfect and appealing English language. We are very delighted to be an assist for people from different realms of life- from a school student to a retired adult, we are able to chip in. At Kenme, we openly welcome learners from all kinds of domains. We provide a comfortable and cordial abode in order to make learning fully relaxed and serene. Since our classes are though WhatsApp, it offers complete privacy and accessibility for everyone. Through online WhatsApp learning, we focus to make learning English a hassle- free and gratifying process.</p>
+                        <p>A journey that commenced in 2021; KENME ONLINE ENGLISH has soared far and high since. Our dream of equipping the dear Keralites with proficiency in the English language has seen fruition beyond our expectations even. We are delighted to be of assistance to the students from different walks of life; from school students to retired adults, our family has welcomed and taught our beloved learners from the most diverse backgrounds. Our personal tutors ensure for our students, excellent learning conditions. Since our classes are online, it offers complete privacy and accessibility for everyone. 
+English learning has become a hassle-free and enjoyable affair thus. 
+</p>
                         <a href="#" class="main-btn">Explore</a>
                     </div>
                 </div>
