--- a/about-us.html
+++ b/about-us.html
@@ -502,13 +502,13 @@ English learning has become a hassle-free and enjoyable affair thus.
                     <div class="testimonials-title">
                         <h2 class="title">OTHER ACTIVITIES WE PROVIDE</h2>
                         <span class="line"></span>
-                        <p>Vocabulary help,
-                            Interview tips,
-                            Video lessons,
-                            Interactive se,ssions
-                            Stage Fear,
-                            Language podcasts,
-                            language related contents through our social media</p>
+                        <p>Vocabulary Help</p><br>
+<p>Calling Sessions</p><br>
+<p>Interview Tips</p><br>
+<p>Listening Activities</p><br>
+<p>Writing Tasks</p><br>
+<p>Interactive Sessions</p><br>
+<p>Language Enhancing Content on Our Social Media</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
