--- a/about-us.html
+++ b/about-us.html
@@ -439,7 +439,7 @@ English learning has become a hassle-free and enjoyable affair thus.
                                 </a>
                             </div>
                             <div class="teacher-content">
-                                <h4 class="name"><a href="teacher-details.html">Mr Anshif</a></h4>
+                                <h4 class="name"><a href="teacher-details.html">Mr Anshif K</a></h4>
                                 <span class="designation">Managing Director</span>
                             </div>
                         </div>
@@ -481,7 +481,7 @@ English learning has become a hassle-free and enjoyable affair thus.
                                 </a>
                             </div>
                             <div class="teacher-content">
-                                <h4 class="name"><a href="teacher-details.html">Mr Junaid</a></h4>
+                                <h4 class="name"><a href="teacher-details.html">Mr Junaid T</a></h4>
                                 <span class="designation">Managing Director</span>
                             </div>
                         </div>
@@ -503,11 +503,11 @@ English learning has become a hassle-free and enjoyable affair thus.
                         <h2 class="title">OTHER ACTIVITIES WE PROVIDE</h2>
                         <span class="line"></span>
                         <p>Vocabulary Help</p><br>
-<p>Calling Sessions</p><br>
-<p>Interview Tips</p><br>
-<p>Listening Activities</p><br>
-<p>Writing Tasks</p><br>
-<p>Interactive Sessions</p><br>
+<p>Calling Sessions</p>
+<p>Interview Tips</p>
+<p>Listening Activities</p>
+<p>Writing Tasks</p>
+<p>Interactive Sessions</p>
 <p>Language Enhancing Content on Our Social Media</p>
                     </div>
                 </div>
