--- a/about-us.html
+++ b/about-us.html
@@ -502,13 +502,13 @@ English learning has become a hassle-free and enjoyable affair thus.
                     <div class="testimonials-title">
                         <h2 class="title">OTHER ACTIVITIES WE PROVIDE</h2>
                         <span class="line"></span>
-                        <p>Vocabulary Help</p><br>
+                        <p>Vocabulary Help</p>
 <p>Calling Sessions</p>
 <p>Interview Tips</p>
 <p>Listening Activities</p>
 <p>Writing Tasks</p>
 <p>Interactive Sessions</p>
-<p>Language Enhancing Content on Our Social Media</p>
+<p>Language Enhancing Content on Our Social Media</p><br>
                     </div>
                 </div>
                 <div class="col-lg-6">
