--- a/about-us.html
+++ b/about-us.html
@@ -551,7 +551,7 @@ English learning has become a hassle-free and enjoyable affair thus.
                         <div class="section-title-2 mt-25">
                             <h2 class="title">Download Our Mobile App Now!</h2>
                             <span class="line"></span>
-                            <p>Our Mobile App is now available at both Play store and App Store</p>
+                            <p>Our Mobile App is now available in both Play Store and App Store.</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
