--- a/about-us.html
+++ b/about-us.html
@@ -589,19 +589,19 @@ English learning has become a hassle-free and enjoyable affair thus.
                             
                                 <li><a href="teachers.html">Our Trainers</a></li>
                                 <li><a href="">Our Events</a></li>
-                                <li><a href="blog-left-sidebar.html">Blog post</a></li>
+                                <li><a href="blog-left-sidebar.html">Blog Posts</a></li>
                                 <li><a href="faq.html">FAQs</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-link mt-45">
-                            <h4 class="footer-title">Useful Link</h4>
+                            <h4 class="footer-title">Useful Links</h4>
                             <ul class="link-list">
                               
                                 <li><a href="#">Our Teachers</a></li>
                                 <li><a href="#">Our Events</a></li>
-                                <li><a href="#">Blog Post</a></li>
+                                <li><a href="#">Blog Posts</a></li>
                                 <li><a href="register.html">Register</a></li>
                             </ul>
                         </div>
