--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
     <!--====== Slider Start ======-->
 
     <section class="slider-area slider-active">
-        <div class="single-slider d-flex align-items-center bg_cover" style="background-image: url(assets/images/Slider1#.jpg);">
+        <div class="single-slider d-flex align-items-center bg_cover" style="background-image: url(assets/images/Slidersrj2.jpg);">
             <div class="container">
                 <div class="slider-content">
                     <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s">English Mastery With KENME ONLINE ENGLISH</h2>
@@ -212,7 +212,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                 </div>
             </div>
         </div>
-        <div class="single-slider d-flex align-items-center bg_cover" style="background-image: url(assets/images/Slider2.JPG);">
+        <div class="single-slider d-flex align-items-center bg_cover" style="background-image: url(assets/images/Slidersrj1.jpg);">
             <div class="container">
                 <div class="slider-content">
                     <h2 class="title" data-animation="fadeInLeft" data-delay="0.2s">KENME ONLINE ENGLISH to Teach You English</h2>
@@ -245,7 +245,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                     </div>
                 </div>
                 <div class="features-mask">
-                    <div class="features-mask-image bg_cover" style="background-image: url(assets/images/features-bg.jpg);">
+                    <div class="features-mask-image bg_cover" style="background-image: url(assets/images/Img3srj.png);">
                     </div>
                     <div class="features-mask-content">
                         <p>8<span>+</span> Courses</p>
