--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ src="https://www.facebook.com/tr?id=2684068508400813&ev=PageView&noscript=1"
                 <div class="row justify-content-end">
                     <div class="col-lg-11">
                         <div class="features-image">
-                            <img src="assets/images/Img3srj.png" alt="">
+                            <img src="assets/images/features.png" alt="">
                         </div>
                     </div>
                 </div>
